# playground

./: LICENSE  README.md
simple-rag/: README.md  pyproject.toml
simple-rag/files/: harbor.txt  kubernetes.txt  open_telemetry.txt  open_telemetry2.txt
simple-rag/src/: ingestion.py  rag.py
