 [tool.poetry]
 name = "simple-rag"
 version = "1.0.0" 
 description=""
 authors =["raghu"]
 readme="README.md"
 packages=[{include ="simple-rag", from="src"}]
 
[tool.poetry.dependencies]
python = ">=3.11, <3.13"
langchain = "^0.3.0"
langchain-community = "^0.3.0"
Chroma = "^0.2.0"
chromadb = "^0.5.7"
oci = "^2.134.0"
langchain-chroma = "^0.1.4"
unstructured = { version = "0.15.12", python = ">=3.11" } 

[build-system]
requires =["poetry-core"]
build-backend="poetry.core.masonry.api"